testdata/baselines/reference/submodule/conformance/paramTagNestedWithoutTopLevelObject4.errors.txt
paramTagNestedWithoutTopLevelObject4.js(5,16): error TS2339: Property 'bar' does not exist on type 'number'.


==== paramTagNestedWithoutTopLevelObject4.js (1 errors) ====
    /**
     * @param {number} xyz.bar.p
     */
    function g(xyz) {
        return xyz.bar.p;
                   ~~~
!!! error TS2339: Property 'bar' does not exist on type 'number'.
    }